workloads/devops-lab/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-lab
spec:
  selector:
    app: devops-lab
  ports:
    - port: 5000
      targetPort: 5000
  type: NodePort
